fix: iHatch text spacing mobile

--- a/iHatch/styles.css
+++ b/iHatch/styles.css
@@ -145,7 +145,7 @@ div .card-text p{
     text-align: center;
   }
   section p{
-    margin: 25px;
+    margin: 18px;
   }
 
   .container .row{
